--- a/04-m365-okta.md
+++ b/04-m365-okta.md
@@ -9,17 +9,12 @@ Office 365 so that the following use cases can be demonstrated:
 
 -   Lifecycle Management (LCM) for Microsoft Office 365
 
-This guide also provides instructions for setting up a scheduled import
-and a scheduled workflow which will exercise the Microsoft Graph API in
-your E5 sandbox to prevent it from expiring.
-
-Before you can complete this guide you must have already signed up for a
-Microsoft E5 sandbox and configured it with a custom DNS domain. A
+Before you can complete this guide you must have already completed the
+previous section and signed up for a Microsoft Office 365 sandbox as 
+well as configured it with a custom DNS domain. A
 custom DNS domain is required because it's not possible to set up
 federation against the default onmicrosoft.com domain.
-
-This guide assumes that you have at least one test user (in addition to
-your admin user) defined in your Okta org.
+This 
 
 
 ### Introduction
@@ -36,7 +31,7 @@ standard, were developed by Microsoft (and a group of other companies)
 in the days before SAML 2.0. Today, it's unusual to see WS-Federation
 except for in relation to integration with Microsoft.
 
-Note: Microsoft has recently added support for SAML 2.0 but the
+> Note: Microsoft has recently added support for SAML 2.0 but the
 integration is more limited than when using WS-Federation.
 
 The Okta Lifecycle Management integration with Microsoft uses
@@ -47,18 +42,13 @@ get pretty complex if you need to integrate with an environment that
 uses Microsoft Azure AD Connect (AAD Connect) to synchronize an
 on-premises AD with Azure AD in the cloud.
 
-This document covers the simplest integration you need to build a demo
-system.
-
-
 # Add Microsoft Office 365 Application to Okta
 
 Okta maintains a specific integration for Microsoft Office 365 in the
 Okta Integration Network (OIN). To add this to your Okta org, follow
 these steps:
 
-1.  Use a browser to open the administration UI of your Okta demo org
-
+1.  Use a browser to open the administration UI of your Okta demo org `{{idp.name}}-admin.okta.com`
 
 ![Okta](images/04/image01.png "image_tooltip")
 
